[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tentamen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Lamp.tscn" type="PackedScene" id=2]
[ext_resource path="res://Tehuis.tscn" type="PackedScene" id=3]
[ext_resource path="res://Slaap.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stappenteller.tscn" type="PackedScene" id=5]
[ext_resource path="res://TileScroller.tscn" type="PackedScene" id=6]
[ext_resource path="res://SeesawScene.tscn" type="PackedScene" id=7]
[ext_resource path="res://GAME.gd" type="Script" id=8]
[ext_resource path="res://HKUToelating.tscn" type="PackedScene" id=9]
[ext_resource path="res://Mindfullness.tscn" type="PackedScene" id=10]

[node name="Node2D" type="Node2D"]
script = ExtResource( 8 )

[node name="Tehuis" parent="." instance=ExtResource( 3 )]
position = Vector2( 49, 276 )

[node name="Lamp" parent="." instance=ExtResource( 2 )]
z_index = 1

[node name="Tentamen" parent="." instance=ExtResource( 1 )]

[node name="Slaap" parent="." instance=ExtResource( 4 )]

[node name="Stappenteller" parent="." instance=ExtResource( 5 )]
position = Vector2( 515, 351 )

[node name="TileScroller" parent="." instance=ExtResource( 6 )]
position = Vector2( 331, 332 )

[node name="Node2D" parent="." instance=ExtResource( 7 )]
position = Vector2( 589, 221 )

[node name="Pauze" type="Button" parent="."]
margin_left = 347.0
margin_top = 179.0
margin_right = 419.0
margin_bottom = 205.0
text = "Pauze"

[node name="Button2" type="Button" parent="."]
pause_mode = 2
margin_left = 343.0
margin_top = 212.0
margin_right = 430.0
margin_bottom = 238.0
text = "Hoofdmenu"

[node name="VolgendeGame" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HKUToelating" parent="." instance=ExtResource( 9 )]
position = Vector2( 16, -64 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 293.0
margin_top = 186.0
margin_right = 333.0
margin_bottom = 226.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 258.0
margin_top = 226.0
margin_right = 341.0
margin_bottom = 266.0

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
margin_left = 333.0
margin_top = 242.0
margin_right = 427.0
margin_bottom = 277.0

[node name="Button" type="Button" parent="."]
margin_left = 291.0
margin_top = 154.0
margin_right = 336.0
margin_bottom = 174.0
text = "Sneller"

[node name="Mindfullness" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[node name="Mindfullness2" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Line2D2" type="Line2D" parent="."]
position = Vector2( 0, -6 )
points = PoolVector2Array( 291, -18, 305, 101, 267, 157, 245, 256, 282, 335, 292, 400, 293, 471, 292, 509, 474, 530, 461, 407, 453, 304, 444, 281, 446, 188, 486, 133, 487, 32, 491, -3, 491, -12, 599, -176, 1165, -32, 788, 169, 668, 170, 467, 156, 364, 150, 228, 133, 139, 128, 49, 127, -305, 134, -241, 229, -144, 311, 67, 276, 197, 275, 285, 290, 366, 306, 412, 303, 447, 302, 702, 311, 776, 309 )

[connection signal="pressed" from="Pauze" to="." method="_on_Pauze_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="VolgendeGame" to="." method="_on_VolgendeGame_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Mindfullness" to="." method="_on_Mindfullness_timeout"]
